:bug: Fix jump link hover and focus styles being wrong

--- a/src/assets/objects/_link.scss
+++ b/src/assets/objects/_link.scss
@@ -38,9 +38,21 @@
     font-weight: bold;
     line-height: var(--height);
   }
+
+  &:hover .kimLink_icon {
+    color: var(--color-canvas);
+    background-color: var(--color-link);
+  }
+
+  &:focus-visible .kimLink_icon {
+    border-width: var(--border-regular);
+    border-color: var(--color-focus-text);
+    color: var(--color-focus-text);
+    background-color: var(--color-focus-background);
+  }
 }
 
-.kimLink-jump .kimLink_icon {
+.kimLink_icon {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -52,18 +64,8 @@
   margin-inline-end: var(--space-2);
 
   svg {
+    inline-size: calc(var(--height) / 2);
+    block-size: calc(var(--height) / 2);
     margin-inline-end: 0;
-  }
-
-  :hover & {
-    color: var(--color-canvas);
-    background-color: var(--color-link);
-  }
-
-  :focus-visible & {
-    border-width: var(--border-regular);
-    border-color: var(--color-focus-text);
-    color: var(--color-focus-text);
-    background-color: var(--color-focus-background);
   }
 }
